--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .wrapper {
   /* max-height: 1200px; */
   /* height: 100vh; */
-  max-width: 1100px;
+  max-width: 800px;
   width: 100%;
   margin: 0 auto;
   background-color: black;
@@ -32,7 +32,7 @@ img {
   display: none;
  
 }
-.button {
+.link {
   height: 150px;
   width: 100%;
   background-color: peru;
